fix: log in button no text wrap

--- a/beta/src/components/header/index.css
+++ b/beta/src/components/header/index.css
@@ -104,3 +104,7 @@ ul[role="menu"].flex-column li.active::after {
     font-size: 16px;
   }
 }
+
+.white-space-no-wrap {
+  white-space: nowrap;
+}
